# temporal-trading-agents

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  DEPLOYMENT_QUICKSTART.md  IMPLEMENTATION_GUIDE_LOGS.md  LICENSE  README.md  TESTING_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  test_setup.py  test_strategy.py
agents/: __init__.py
backend/: Dockerfile  analysis_queue.py  auto_optimize_manager.py  backtesting_engine.py  cache_manager.py  data_sync_manager.py  database.py  forecast_publisher.py  gpu_profiles.py  log_capture.py  main.py  models.py  parameter_optimizer.py  regime_analysis.py  requirements.txt  scheduler.py  websocket_manager.py
docs/: BACKTESTING_IMPLEMENTATION.md  DATA_PRELOADING.md  GPU_PROFILES.md  HUGGINGFACE_INTEGRATION.md  PARALLEL_DOWNLOADS_AND_RESUME.md  PARAMETER_OPTIMIZATION_AND_REGIME_ANALYSIS.md  RUNPOD_DEPLOYMENT.md
docs/backtesting/: realistic_backtest_framework.py  realistic_backtesting_guide.md  temporal_integration.py
examples/: compare_all_8_strategies.py  compare_all_strategies.py  crypto_14day_forecast.py  crypto_ensemble_forecast.py  crypto_forecasting_improved.py  huggingface_model_sharing.py  run_14day_forecast.py  stock_forecasting.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
mcp-server/: Dockerfile  requirements.txt  server.py
scripts/: BACKUP_RESTORE_README.md  backup.sh  extractFromMongo.py  preload_market_data.py  preload_popular_symbols.sh  restore.sh  restoreToMongo.py  runpod_deploy.sh  runpod_start.sh  test_gpu_profile.py
strategies/: __init__.py  acceleration_strategy.py  cached_data_fetch.py  confidence_weighted_strategy.py  crypto_trading_strategy.py  data_cache.py  forecast_gradient_strategy.py  massive_s3_data_source.py  mean_reversion_strategy.py  model_cache.py  multi_timeframe_strategy.py  polygon_data_source.py  risk_adjusted_strategy.py  strategy_cache.py  strategy_utils.py  swing_trading_strategy.py  volatility_position_sizing.py
(+24 files in other folders)
